destination file corrected

--- a/map_Display.html
+++ b/map_Display.html
@@ -90,7 +90,7 @@
 var places = [
               {
                 name: "Delhi",
-        nam: "calenderViewfor22June2016.html",
+        nam: "calendarViewForecast.html",
         latlon: "28.0N,75.0E",
                 location: {
                   latitude: 28.28,
