--- a/map_Display.html
+++ b/map_Display.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <head>
+  
 	<script src="http://colorbrewer2.org/export/colorbrewer.js"></script>
+ 
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="http://d3js.org/topojson.v1.min.js"></script>
 
   <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 
+
+ <!-- <script src="d3.js"></script> -->
   <style>
 
 
@@ -65,9 +69,15 @@
         #plots{
           position:absolute;
           margin-left: 150px;
-          margin-top: 50px;
+          height:550px;
+          width:900px;
+          margin-top: 30px;
           text-align:right;
           display: inline-block;
+        }
+        #plots1{
+          margin-top: 50px;
+          text-align:left;
         }
   			
   </style>
@@ -82,7 +92,8 @@
 					<div id = "map1"> 
 						<div id="subtitle">Glimpse of Weather Conditions in the prominent states of India</div>
 					</div>
-					<div id="plots"><iframe src="" name="iframe_a" width="900px" height="550px" ></iframe></div>
+					<div id="plots"><iframe src="" name="iframe_a" width="900px" height="550px" frameBorder="0" ></iframe></div>
+          <!-- <div id="nplots"><iframe src="calenderView3.html" id="frameId" name="iframe_b" width="100%" height="750px" ></iframe></div> -->
 				     		   
 	  
 
@@ -90,7 +101,7 @@
 var places = [
               {
                 name: "Delhi",
-        nam: "calendarViewForecast.html",
+        nam: "calenderViewfor24June2016.html",
         latlon: "28.0N,75.0E",
                 location: {
                   latitude: 28.28,
