all variables display including xml retrieval

--- a/map_Display.html
+++ b/map_Display.html
@@ -101,7 +101,7 @@
 var places = [
               {
                 name: "Delhi",
-        nam: "calendarViewForecast.html",
+        nam: "calenderViewfor26June2016.html",
         latlon: "28.0N,75.0E",
                 location: {
                   latitude: 28.28,
