--- a/linePlots.html
+++ b/linePlots.html
@@ -118,6 +118,12 @@ body {
         font-weight: bold;
         font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif ; 
       }
+.legendText{
+        font-size: 20px;
+        color:#566573;
+        font-weight: bold;
+        font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif ; 
+      }
 #dateList{
         background: #0097A7;
         color:#FBFCFC;
@@ -168,6 +174,7 @@ body {
           </form>
   </div>
   <div id="varhead"></div>
+  <div id="legends"></div>
   <div id="plot"></div>
   <div id="legendOptions">
           <p class="formText">Legend Type:</p>
@@ -441,7 +448,7 @@ var getGraph=function (g_variable,g_date,day_no){
                                                 });      
             if(compare==1) // to change stroke style.
             {
-              path.style("stroke-dasharray",(Math.pow(2,recCounter),Math.pow(2,recCounter))); 
+              path.style("stroke-dasharray",(Math.pow(2,recCounter)-1,Math.pow(2,recCounter)-1)); 
               recCounter=recCounter+2;
             }
             
@@ -548,6 +555,29 @@ var graphPlot= function(w_var,g_date,day_no){
             {
               var num=dateString.indexOf(g_date);
               recCounter=0;
+              var legsvg=d3.select("#legends").append("svg")
+                  .attr("width",1000)
+                  .attr("height", 100)
+                  .style("fill","steelblue")
+                  .append("g");
+              var lines=legsvg.selectAll(".lines").data([0,2,4])
+                        .enter().append("line")
+                        .attr("class", "line_b")
+                        .attr("x1", function (d){ return (200*d+50);})
+                        .attr("x2", function (d){ return ((200*d)+100);})
+                        .attr("y1", 20)
+                        .attr("y2", 20)
+                        .attr("stroke","#273746")
+                        .style("stroke-opacity", 1)
+                        .style("stroke-dasharray",function(d){if(d==0) return (0,0); return (Math.pow(2,d),Math.pow(2,d))});
+              var textforlines=legsvg.selectAll(".lines").data(["Most Recent","Less Recent","Least Recent"])
+                        .enter().append("text")
+                        .attr("class", "line_b")
+                        .attr("x", function (d,i){ return (200*2*i+50);})
+                        .attr("y", 60)
+                        .attr("class","legendText")
+                        .text(function(d){return d;});
+ 
               if(def_day_no==1)
               {
                 if(num+2<5)
@@ -673,6 +703,7 @@ function datasetButtons(){
         .on("click", function(d) {
          document.getElementById("plot").innerHTML = "";
          document.getElementById("varhead").innerHTML = "";
+         document.getElementById("legends").innerHTML="";
          curVariable=d;
          graphPlot(d,curDate,def_day_no);
 
@@ -687,6 +718,7 @@ function datasetButtons(){
           compare=0;
          document.getElementById("varhead").innerHTML = "";
          document.getElementById("plot").innerHTML = "";
+         document.getElementById("legends").innerHTML="";
          curVariable="all";
          graphPlot("all",curDate,def_day_no);
 
@@ -713,6 +745,7 @@ function dayChoice()
                        {compare=1;
                         document.getElementById("varhead").innerHTML = "";
                         document.getElementById("plot").innerHTML = "";
+                        document.getElementById("legends").innerHTML="";
                         graphPlot(curVariable,curDate,def_day_no); }});
 }
 function update() {
@@ -754,6 +787,7 @@ function dateChange(){
           curDate=dateString[index];
           document.getElementById("varhead").innerHTML = "";
           document.getElementById("plot").innerHTML = "";
+          document.getElementById("legends").innerHTML="";
           graphPlot(curVariable,curDate,0);
           //to load whole new files of that particular date.
         }
@@ -764,11 +798,13 @@ function dayWiseView(day_no){
             compare=0;
           document.getElementById("varhead").innerHTML = "";
           document.getElementById("plot").innerHTML = "";
+          document.getElementById("legends").innerHTML="";
           graphPlot(curVariable,curDate,def_day_no);
 }
  function changeLegend(option){
           document.getElementById("varhead").innerHTML = "";
           document.getElementById("plot").innerHTML = "";
+          document.getElementById("legends").innerHTML="";
           curLegendOption=option;
           graphPlot(curVariable,curDate,def_day_no);
         }
