--- a/linePlots.html
+++ b/linePlots.html
@@ -299,7 +299,7 @@ var xAxis = d3.svg.axis()
     .tickSize(10)
     .tickFormat(d3.time.format("%H"))
     .orient("bottom");
-
+var path;
 var yAxis = d3.svg.axis()
     .scale(y)
     .tickSize(10)
@@ -321,7 +321,8 @@ var def_day_no=0;
 var curLegendOption=1;
 var svg;
 var svg1;
-var path;
+var filepath;
+var intervals=[];
 var latlon;
 var variables=[];
 var var_names=[];
@@ -329,7 +330,7 @@ var curVariable;
 var vnames=[];
 
           $.ajax({
-          url: 'Vfile.xml',
+          url: 'master.xml',
           type: 'GET',
           dataType: 'xml',
           timeout: 1000,
@@ -337,18 +338,31 @@ var vnames=[];
               alert('Error loading XML document');
           },
           success: function(xml){
-              var xmlElement=xml.getElementsByTagName("variable");
-              for (i=0;i<xmlElement.length;i++)
-              {
-                  variables.push(xmlElement[i].childNodes[0].nodeValue);
-                  //alert(xmlElement[i].childNodes[0].nodeValue);
-              }
-              var xmlElement=xml.getElementsByTagName("name");
-              for (i=0;i<xmlElement.length;i++)
-              {
-                  vnames.push(xmlElement[i].childNodes[0].nodeValue);
-                  //alert(xmlElement[i].childNodes[0].nodeValue);
-              }
+              var x = xml.getElementsByTagName('model');
+                for (i = 0; i < x.length; i++) { 
+                    if(x[i].getAttribute('name')=="National")
+                    {
+                      var xml1=x[i];
+                      filepath=xml1.getElementsByTagName("path")[0].childNodes[0].nodeValue;
+                      var interval=xml1.getElementsByTagName("interval");
+                      for (j=0;j<interval.length;j++)
+                          {
+                              intervals.push(interval[j].childNodes[0].nodeValue);
+                          }
+                        var vars=xml1.getElementsByTagName("variable");
+                        for (j=0;j<vars.length;j++)
+                          {
+                              vnames.push(vars[j].getElementsByTagName("vname")[0].childNodes[0].nodeValue);
+                              variables.push(vars[j].getElementsByTagName("fname")[0].childNodes[0].nodeValue);
+                          }
+                          alert("Path :"+filepath);
+                          alert(intervals);
+                          alert(vnames);
+                          alert(variables); 
+                          break;
+
+                    }
+                }
               curVariable="all";
               dayChoice();
               datasetButtons();
@@ -367,7 +381,7 @@ var getGraph=function (g_variable,g_date,day_no){
   var unit;
   
 
-      d3.json("Stats/"+g_variable+"_"+g_date+".json", function(error, d) {
+      d3.json(filepath+g_variable+"_"+g_date+".json", function(error, d) {
                     if (error) throw error;
                     
                     var days=[];
@@ -618,7 +632,7 @@ var graphPlot= function(w_var,g_date,day_no){
               recCounter=0;
               var legsvg=d3.select("#legends").append("svg")
                   .attr("width",900)
-                  .attr("height", 40)
+                  .attr("height", 50)
                   .append("g");
  
               if(def_day_no==1)
@@ -651,10 +665,10 @@ var graphPlot= function(w_var,g_date,day_no){
                   getGraph(w_var,dateString[num-1],def_day_no-1);
                   dates.push(dispdates[num-1]);
                 }
+                getGraph(w_var,g_date,def_day_no);
+                dates.push(dispdates[num]);
                 if(num+1<5)
                 {
-                  getGraph(w_var,g_date,def_day_no);
-                  dates.push(dispdates[num]);
                   getGraph(w_var,dateString[num+1],def_day_no+1);
                   dates.push(dispdates[num+1]);
                 }
@@ -688,8 +702,8 @@ var graphPlot= function(w_var,g_date,day_no){
                         .attr("class", "line_b")
                         .attr("x1", function (d,i){ return ((200*i)+150+(i*50));})
                         .attr("x2", function (d,i){ return ((200*i)+250+(i*50));})
-                        .attr("y1", 25)
-                        .attr("y2", 25)
+                        .attr("y1", 30)
+                        .attr("y2", 30)
                         .attr("stroke","#273746")
                         .style("stroke-opacity", 1)
                         .style("stroke-dasharray",function(d,i){if(d==0) return (0,0); return (Math.pow(2,(6-(2*i))),Math.pow(2,(6-(2*i))));});
@@ -697,7 +711,7 @@ var graphPlot= function(w_var,g_date,day_no){
                         .enter().append("text")
                         .attr("class", "line_b")
                         .attr("x", function (d,i){ return (200*i+20+(i*50));})
-                        .attr("y", 25)
+                        .attr("y", 30)
                         .attr("class","legendText")
                         .text(function(d){ return d+" ";});
             }
@@ -911,12 +925,7 @@ function yaxisFunction() {
 
        yaxispos.attr("transform","translate("+document.body.scrollLeft+",0)");
        yaxispos.call(yAxis);
-        /*if (document.body.scrollRight > 0 || document.documentElement.scrollLeft > 0) {
-            document.getElementById("myP").className = "test";
-        } else {
-            document.getElementById("myP").className = "";
-        }*/
-  }
+    }
 }
 
 </script>
