--- a/linePlots.html
+++ b/linePlots.html
@@ -67,6 +67,14 @@ body {
   font-size: 25px;
   font-weight: bolder;
 }
+.title1{
+  color:#1F618D;
+  text-align: right;
+  float:right;
+  font-family: "Palantino Linotype";
+  font-size: 25px;
+  font-weight: bolder;
+}
 .vartitle{
   color:#273746;
   text-align: center;
@@ -76,6 +84,10 @@ body {
 }
 #varhead{
   height:25px;
+  width:410px;
+  margin:0 auto;
+  position: relative;
+
 }
 #opRange{
   width:50px;
@@ -177,13 +189,14 @@ body {
       }
 #dateOptions{
         text-align: right;
-        display: inline;
+        width:400px;
+        float:right;
       }
 #daylist{
         text-align:left;
-        display: inline-block;
         position: absolute;
-
+        float:left;
+        width:800px;
       }
 #legendOptions {
             position: relative;
@@ -201,6 +214,7 @@ body {
  #legends{
   color:#1C2833  ;
   border-radius: 10px;
+  margin-top: 40px;
   /*background-color: #A2D9CE;*/
   box-shadow: inset 0 0 5px #0097A7;
   text-align: center;
@@ -219,6 +233,7 @@ body {
             </select>
           </form>
   </div>
+  <div id="daylist"></div>
   <div id="varhead"></div>
   <div id="legends"></div>
   <div id="plot"></div>
@@ -231,7 +246,7 @@ body {
           </form>
     </div>
   <div id="dataset-picker">
-  <div id="daylist"></div></div>
+  </div>
   
   
 <script src="//d3js.org/d3.v3.min.js"></script>
@@ -377,7 +392,7 @@ var vnames=[];
               datasetButtons();
               dateString=["20160621","20160620","20160619","20160618","20160617"];
               curDate=dateString[0];
-              d3.select("#heading").append("p").text(title).attr("class","title").append("text").text("    Location: "+curPlace).attr("class","title");
+              d3.select("#heading").append("p").text(title).attr("class","title").append("text").text("Location: "+curPlace).attr("class","title1");
               //alert(vnames);
               //alert(variables);
               graphPlot(curVariable,curDate,def_day_no);
@@ -655,7 +670,7 @@ var graphPlot= function(w_var,g_date,day_no){
               recCounter=0;
               var legsvg=d3.select("#legends").append("svg")
                   .attr("width",900)
-                  .attr("height", 50)
+                  .attr("height", 80)
                   .append("g");
  
               if(def_day_no==1)
@@ -723,8 +738,8 @@ var graphPlot= function(w_var,g_date,day_no){
               var lines=legsvg.selectAll(".lines").data(dates)
                         .enter().append("line")
                         .attr("class", "line_b")
-                        .attr("x1", function (d,i){ return ((200*i)+220+(i*70));})
-                        .attr("x2", function (d,i){ return ((200*i)+320+(i*70));})
+                        .attr("x1", function (d,i){ return ((200*i)+180+(i*70));})
+                        .attr("x2", function (d,i){ return ((200*i)+280+(i*70));})
                         .attr("y1", 30)
                         .attr("y2", 30)
                         .attr("stroke",function(){return colors[variables.indexOf(gv)];})
@@ -736,7 +751,13 @@ var graphPlot= function(w_var,g_date,day_no){
                         .attr("x", function (d,i){ return (200*i+20+(i*70));})
                         .attr("y", 30)
                         .attr("class","legendText")
-                        .text(function(d,i){ return d+" Day:"+(i+1);});
+                        .text(function(d,i){ return d;});
+               var dayforlines=legsvg.selectAll(".lines").data(dates)
+                        .enter().append("text")
+                        .attr("x", function (d,i){ return (200*i+20+(i*70));})
+                        .attr("y", 60)
+                        .attr("class","legendText")
+                        .text(function(d,i){ return "Day:"+(i+1)+" Fcst";});
             }
             else{
               for(j=0;j<variables.length;j++)
@@ -843,7 +864,7 @@ function datasetButtons(){
 function dayChoice()
 { 
     var days=[0,1,2,3];
-    var dayButtons=d3.select("#dateOptions").selectAll(".dayButtons")
+    var dayButtons=d3.select("#daylist").selectAll(".dayButtons")
                   .data(days).enter()
                   .append("input")
                   .attr("type","button")
@@ -853,7 +874,7 @@ function dayChoice()
                     $(".daybutton.daybuttonPressed").removeClass("daybuttonPressed");
                     $(this).addClass("daybuttonPressed");
                     dayWiseView(d);});
-    var compareButton=d3.select("#dateOptions").append("input")
+    var compareButton=d3.select("#daylist").append("input")
                     .attr("type","button")
                     .attr("value","Compare")
                     .attr("class","compareButton")
