destination file names changed
destination pages' names corrected w.r.t to naming convention used.

--- a/map_Display.html
+++ b/map_Display.html
@@ -207,7 +207,7 @@
 	  
 
 <script>
-var dest_URL=["linePlots20july.html","calenderView20July2016.html"];
+var dest_URL=["linePlots.html","calendarViewForecast.html"];
 var destFrames=["iframe_a","iframe_a"];
 var destURL=dest_URL[0];
 var curFrame=destFrames[0];
